that i am aware of. both local build and batch build modes seem to work great
now. <fingers_crossed> also, i fixed the "use of unitialized variables" in
PutEnv. the rest of the changes are just cleanup.

added WARN and WARNX to mesg.h. these macros are like ASSERT but they do not
kill the program.

----------
spartha1    Date: Sat Jun  2 08:46:29 EDT 2007  CSN: CSN-asimcore-122
                  Sat Jun  2 12:46:29 UTC 2007


Directory lib/libawb
 model.cpp                 Locally Modified          121 

Updating with simcore changes (rev. 2346 - Sailashri Parthasarathy)

Fixed the "Unimplemented configuration version" error that occured when a .apm file was modified using apm-edit. Since the version number was changed from 2.0 to 2.1, the check for version number was modified to allow any version 2.*.

----------
spartha1    Date: Sat Jun  2 08:48:13 EDT 2007  CSN: CSN-asimcore-123
                  Sat Jun  2 12:48:13 UTC 2007


Directory libperl/Asim/lib/Asim
 Inifile.pm                Locally Modified          122 
 Model.pm                  Locally Modified          122 

Updating with simcore changes (rev. 2347 - Joel Emer)

Added a utility method to check if a file has been modified
since it was opened. To be useful, this method needs to
be used when the file is locked.

----------
spartha1    Date: Sat Jun  2 08:49:27 EDT 2007  CSN: CSN-asimcore-124
                  Sat Jun  2 12:49:27 UTC 2007


Directory tools/scripts
 asim-run                  Locally Modified          123 

Updating with simcore changes (rev. 2348 - Brian Slechta)

small but very important typo fix. :(

----------
spartha1    Date: Sat Jun  2 08:51:12 EDT 2007  CSN: CSN-asimcore-125
                  Sat Jun  2 12:51:12 UTC 2007


Directory modules/power_model
 null_power_model.h        Locally Modified          124 

Updating with simcore changes (rev. 2349 - Sari Coumeri)

* Updated null_power_model.h constructors for new template name member
added to power macro classes. (SLC)